--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="Jsonpars">Json Parsing Error</string>
     <string name="no_internet_connection">No internet connection</string>
     <string name="txt_retry">Retry</string>
+    <string name="txt_next_surah">Next Surah</string>
 
 </resources>
